--- a/money-api/src/main/resources/application.properties
+++ b/money-api/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+#--configure money_api mysql
+spring.jpa.database=MYSQL
+spring.datasource.url=jdbc:mysql://localhost:3306/moneyapi?useTimezone=true&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=admin
+#required to avoid the annoying
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.open-in-view=false
+#configure show sql
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+#objetosJava para JSON
+spring.jackson.deserialization.fail-on-unknown-properties=true
+
 
